--- a/AT-ETX-2i/History.html
+++ b/AT-ETX-2i/History.html
@@ -27,7 +27,10 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
-    <div id="25">28.06.2023</div>        
+    <div id="26">13.08.2023</div>        
+     <div>Adjust <code>proc ShowPS</code> for 6.8.2.(0.52)</div>
+    <br> 
+	<div id="25">28.06.2023</div>        
      <div>Use ':' instead of '.' as separator in time field of the TCC's log</div>
     <br> 
      <div id="24">08.06.2021</div>        
