--- a/AT-ETX-2i/History.html
+++ b/AT-ETX-2i/History.html
@@ -27,6 +27,9 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
+    <div id="27">04.10.2023</div>        
+      <div>Report to TCC even MacReg was performed early (SQliteAddLine)</div>
+    <br> 
     <div id="26">13.08.2023</div>        
      <div>Adjust <code>proc ShowPS</code> for 6.8.2.(0.52)</div>
     <br> 
