Add Fan visual check

--- a/AT-ETX-2i/History.html
+++ b/AT-ETX-2i/History.html
@@ -18,7 +18,7 @@
    <h4>ATE software upgrade</h4>
   <!---->
   <table>    
-    <tr><td>ETX-2i</td><td><a href="#21">: 05.10.2020</a></td></tr>
+    <tr><td>ETX-2i</td><td><a href="#30">: 21.12.2023</a></td></tr>
     <tr><td>ETX-DNFV-M-I7</td><td><a href="#05">: 24.09.2017</a></td></tr>
 
   </table>
@@ -27,6 +27,9 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
+    <div id="30">21.12.2023</div>        
+       <div>Add Fan visual check</div>
+    <br>  
     <div id="29">22.11.2023</div>        
        <div>UnregIdBarcode on Failure</div>
     <br>  
