Add Operator Name and Operator ID to log

--- a/AT-ETX-2i/History.html
+++ b/AT-ETX-2i/History.html
@@ -27,6 +27,9 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
+    <div id="32">03.03.2024</div>        
+      <div>Add Operator Name and Operator ID to log</div>
+    <br>
     <div id="31">18.02.2024</div>        
        <div>Perform <code>FansTemperatureSet</code> for all options at <b>Leds</b> Test</div>
     <br>  
