--- a/AT-ETX-2i/History.html
+++ b/AT-ETX-2i/History.html
@@ -28,7 +28,7 @@
   <br> 
   <h4>Changes</h4>
     <div id="33">14.03.2024</div>        
-      <div>Add Remove PS-2 at Leds</div>
+      <div>Add message <b>Remove PS-2</b> at Leds</div>
     <br>     
     <div id="32">03.03.2024</div>        
       <div>Add Operator Name and Operator ID to log</div>
