Call MainEcoCheck (GetDbrName)

--- a/AT-ETX-2i/History.html
+++ b/AT-ETX-2i/History.html
@@ -27,6 +27,9 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
+    <div id="34">06.06.2024</div>        
+      <div>Call MainEcoCheck (GetDbrName)</div>
+    <br>     
     <div id="33">14.03.2024</div>        
       <div>Add message <b>Remove PS-2</b> at Leds</div>
     <br>     
