Add support ETX-2I_DT/H/8.5/AC/1SFP/4CMB/SYE/RTR

--- a/AT-ETX-2i/History.html
+++ b/AT-ETX-2i/History.html
@@ -27,6 +27,9 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
+    <div id="35">31.07.2024</div>        
+      <div>Add support <b>ETX-2I_DT/H/8.5/AC/1SFP/4CMB/SYE/RTR</b></div>
+    <br>     
     <div id="34">06.06.2024</div>        
       <div>Call MainEcoCheck (GetDbrName)</div>
     <br>     
