Use Extended LibUrl.tcl; Perform GetUcFile (GetDbrName) and use ::tmpLocalUCF (LoadDefConf)

--- a/AT-ETX-2i/History.html
+++ b/AT-ETX-2i/History.html
@@ -27,6 +27,10 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
+    <div id="36">08.08.2024</div>        
+      <div>Use Extended LibUrl.tcl</div>
+	  <div>Perform GetUcFile (GetDbrName) and use ::tmpLocalUCF (LoadDefConf)</div>
+    <br>     
     <div id="35">31.07.2024</div>        
       <div>Add support <b>ETX-2I_DT/H/8.5/AC/1SFP/4CMB/SYE/RTR</b></div>
     <br>     
