Add Load UserConfigFile; OpenRL returns -2 instead of -1
Add LoadDefaultConfiguration and CheckUserDefaultFile Tests
Add CheckButton User Default Configuration File (GuiInventory)
OpenRL returns -2 instead of -1 to avoid TCC

--- a/AT-ETX-2i/History.html
+++ b/AT-ETX-2i/History.html
@@ -27,6 +27,11 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
+    <div id="37">14.08.2024</div>        
+      <div>Add <b>LoadDefaultConfiguration</b> and <b>CheckUserDefaultFile</b> Tests</div>
+	  <div>Add CheckButton <b>User Default Configuration File</b> (GuiInventory)</div>
+	   <div><code>OpenRL</code> returns -2 instead of -1 to avoid TCC</div>
+    <br>     
     <div id="36">08.08.2024</div>        
       <div>Use Extended LibUrl.tcl</div>
 	  <div>Perform GetUcFile (GetDbrName) and use ::tmpLocalUCF (LoadDefConf)</div>
