--- a/AT-ETX-2i/History.html
+++ b/AT-ETX-2i/History.html
@@ -27,10 +27,15 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
+    <div id="38">18.08.2024</div>        
+      <div>Remove <code>file delete -force $fileName</code> and <code>puts $res</code> (GetPageFile)</div>
+	  <div>GUI starts without UUT (GUI)</div>
+	  <div>Add <code>EntryBootMenu</code> to <b>Pages</b></div>
+    <br>     
     <div id="37">14.08.2024</div>        
       <div>Add <b>LoadDefaultConfiguration</b> and <b>CheckUserDefaultFile</b> Tests</div>
 	  <div>Add CheckButton <b>User Default Configuration File</b> (GuiInventory)</div>
-	   <div><code>OpenRL</code> returns -2 instead of -1 to avoid TCC</div>
+	  <div><code>OpenRL</code> returns -2 instead of -1 to avoid TCC</div>
     <br>     
     <div id="36">08.08.2024</div>        
       <div>Use Extended LibUrl.tcl</div>
