--- a/AT-ETX-2i/History.html
+++ b/AT-ETX-2i/History.html
@@ -20,6 +20,7 @@
   <table>    
     <tr><td>ETX-2i</td><td><a href="#30">: 21.12.2023</a></td></tr>
     <tr><td>ETX-DNFV-M-I7</td><td><a href="#05">: 24.09.2017</a></td></tr>
+    <tr><td>ETX-2i_DTAG </td><td><a href="#39">: 01.09.2024</a></td></tr> 
 
   </table>
   <!---->
@@ -27,7 +28,10 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
-    <div id="38">18.08.2024</div>        
+    <div id="39">01.09.2024</div>        
+      <div>Add <b>ETX-2I_DT/H/8.5/AC/1SFP/4CMB/SYE/RTR</b></div>
+    <br>     
+     <div id="38">18.08.2024</div>        
       <div>Remove <code>file delete -force $fileName</code> and <code>puts $res</code> (GetPageFile)</div>
 	  <div>GUI starts without UUT (GUI)</div>
 	  <div>Add <code>EntryBootMenu</code> to <b>Pages</b></div>
