--- a/AT-ETX-2i/History.html
+++ b/AT-ETX-2i/History.html
@@ -28,10 +28,14 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
+    <div id="40">16.09.2024</div>        
+      <div>If <code>gaSet(DutFullName)</code> is <b>ETX-2I_DT/H/8.5/AC/1SFP/4CMB/SYE/RTR</b> <code>set gaSet(dtag) 1</code> (RetriveDutFam)</div>
+	  <div>Remove and insert SFPs manually for <code>gaSet(dtag)==1</code> (DyingGaspTest_1, DataTransmissionUTP, DataTransmissionLoop)</div>
+    <br>     
     <div id="39">01.09.2024</div>        
       <div>Add <b>ETX-2I_DT/H/8.5/AC/1SFP/4CMB/SYE/RTR</b></div>
     <br>     
-     <div id="38">18.08.2024</div>        
+    <div id="38">18.08.2024</div>        
       <div>Remove <code>file delete -force $fileName</code> and <code>puts $res</code> (GetPageFile)</div>
 	  <div>GUI starts without UUT (GUI)</div>
 	  <div>Add <code>EntryBootMenu</code> to <b>Pages</b></div>
