Remove from Menu Don't remove SFP

--- a/AT-ETX-2i/History.html
+++ b/AT-ETX-2i/History.html
@@ -28,6 +28,9 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
+    <div id="41">23.09.2024</div>        
+      <div>Remove from Menu <b>Don't remove SFP</b></div>
+    <br>     
     <div id="40">16.09.2024</div>        
       <div>If <code>gaSet(DutFullName)</code> is <b>ETX-2I_DT/H/8.5/AC/1SFP/4CMB/SYE/RTR</b> <code>set gaSet(dtag) 1</code> (RetriveDutFam)</div>
 	  <div>Remove and insert SFPs manually for <code>gaSet(dtag)==1</code> (DyingGaspTest_1, DataTransmissionUTP, DataTransmissionLoop)</div>
