Week Number by %U instead of %V (License)

--- a/AT-ETX-2i/software/History.html
+++ b/AT-ETX-2i/software/History.html
@@ -28,6 +28,12 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
+    <div id="44">16.06.2025</div>        
+      <div>Week Number by %U instead of %V (License)</div>
+    <br>     
+    <div id="43">12.06.2025</div>        
+      <div>Week Number by %V instead of %W (License)</div>
+    <br>     
     <div id="42">20.01.2025</div>        
       <div>Move all the Tester's files into software folder</div>
 	  <div>Add InformAboutNewFiles to menu</div>
