Read TraceID; prepare repairMode

--- a/AT-ETX-2i/software/History.html
+++ b/AT-ETX-2i/software/History.html
@@ -28,6 +28,9 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
+    <div id="45">02.07.2025</div>        
+      <div>Read TraceID</div>
+    <br>     
     <div id="44">16.06.2025</div>        
       <div>Week Number by %U instead of %V (License)</div>
     <br>     
