Change Tester's Date; Part Number for DC; Mfg Date Code
Mfg Date Code - use clock scan (License)

--- a/AT-ETX-2i/software/History.html
+++ b/AT-ETX-2i/software/History.html
@@ -20,7 +20,7 @@
   <table>    
     <tr><td>ETX-2i</td><td><a href="#30">: 21.12.2023</a></td></tr>
     <tr><td>ETX-DNFV-M-I7</td><td><a href="#05">: 24.09.2017</a></td></tr>
-    <tr><td>ETX-2i_DTAG </td><td><a href="#39">: 01.09.2024</a></td></tr> 
+    <tr><td>ETX-2i_DTAG </td><td><a href="#45">: 02.07.2025</a></td></tr> 
 
   </table>
   <!---->
@@ -30,6 +30,8 @@
   <h4>Changes</h4>
     <div id="45">02.07.2025</div>        
       <div>Read TraceID</div>
+	  <div>Part Number for DC</div>
+	  <div>Check Mfg Date Code by <code>clock scan</code> (License)</div>
     <br>     
     <div id="44">16.06.2025</div>        
       <div>Week Number by %U instead of %V (License)</div>
