--- a/AT-ETX-2i/software/History.html
+++ b/AT-ETX-2i/software/History.html
@@ -28,6 +28,10 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
+    <div id="46">20.07.2025</div>  
+      <div>More 10 sec to get [boot] (EntryBootMenu)</div>
+	  <div>Fix traceID (SQliteAddLine)</div>
+	<br>  
     <div id="45">02.07.2025</div>        
       <div>Read TraceID</div>
 	  <div>Part Number for DC</div>
