--- a/AT-ETX-2i/software/History.html
+++ b/AT-ETX-2i/software/History.html
@@ -28,6 +28,9 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
+    <div id="48">19.11.2025</div>  
+      <div>Don't fail if DBR Boot Version doesn't start with <b>B</b> (PS_IDTest)</div>
+	<br>  
     <div id="47">30.07.2025</div>  
       <div>Fix MacBarcode in Tests (BuildTests)</div>
 	<br>  
