--- a/AT-ETX-2i/software/History.html
+++ b/AT-ETX-2i/software/History.html
@@ -29,7 +29,7 @@
   <br> 
   <h4>Changes</h4>
     <div id="49">24.11.2025</div>  
-      <div>Support FAN Status in SW (FansTemperatureTest)</div>
+      <div>Support FAN Status in SW 6.8.7(1.45) (FansTemperatureTest)</div>
 	<br>  
     <div id="48">19.11.2025</div>  
       <div>Don't fail if DBR Boot Version doesn't start with <b>B</b> (PS_IDTest)</div>
