Weeks calculation (License)
Weeks calculation of UUT's Date Code and PC's Date done by [%Y*52 + %U] and not [clock scan]

--- a/AT-ETX-2i/software/History.html
+++ b/AT-ETX-2i/software/History.html
@@ -28,9 +28,13 @@
   <!-- <tr><td>ETX-DNFV-M-XEON</td><td><a href="#17">: 22.07.2019</a></td></tr>-->  
   <br> 
   <h4>Changes</h4>
+  <br>	
+    <div id="51">10.12.2025</div>        
+      <div>Weeks calculation of UUT's Date Code and PC's Date done by [%Y*52 + %U] and not [clock scan] (License)</div>
+	<br>	
     <div id="50">07.12.2025</div>        
       <div>Use INIT in place of decisions based on DutInitName; TraceID</div>
-	 <br>	
+	<br>	
     <div id="49">24.11.2025</div>  
       <div>Support FAN Status in SW 6.8.7(1.45) (FansTemperatureTest)</div>
 	<br>  
